src/test/ui/span/move-closure.stderr
error[E0308]: mismatched types
  --> $DIR/move-closure.rs:15:17
   |
LL |     let x: () = move || (); //~ ERROR mismatched types
   |                 ^^^^^^^^^^ expected (), found closure
   |
   = note: expected type `()`
              found type `[closure@$DIR/move-closure.rs:15:17: 15:27]`

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0308"
